# PBRRender

./: .gitignore  CMakeLists.txt  README.md
include/core/: Log.hpp
include/core/interface/: API.hpp  IRenderer.hpp
include/platform/: WindowHandler.hpp
include/platform/vulkan/: RenderProcess.hpp  VKContext.hpp  VKRender.hpp  VKRenderProcess.hpp  VKShader.hpp
include/platform/vulkan/vkbasic/: VKDescriptorPool.hpp  VKDevice.hpp  VKInstance.hpp  VKSwapChain.hpp
include/rendering/: camera.hpp
include/resource/: AssetManager.hpp  Material.hpp  Model.hpp  ModelGenerator.hpp  Texture.hpp  Texture_new.hpp  Vertex.hpp
include/utils/: Setting.hpp  ShaderLoader.hpp  vkutil.hpp
shaders/vulkan/: geometry.frag  geometry.vert  geometry_frag.spv  geometry_vert.spv
src/: test.cpp
src/core/: Log.cpp
src/platform/: WindowHandler.cpp
src/platform/vulkan/: VKContext.cpp  VKRender.cpp  VKShader.cpp
src/platform/vulkan/vkbasic/: VKDescriptorPool.cpp  VKDevice.cpp  VKInstance.cpp  VKSwapChain.cpp
src/rendering/: camera.cpp
src/resource/: AssetManager.cpp  ModelGenerator.cpp
